# The_Day_of_Sagittarius_III

./: .gitignore  CMakeLists.txt
the_day_of_sagittarius_iii/: Makefile  design.txt
the_day_of_sagittarius_iii/res/: ship_green.xcf
the_day_of_sagittarius_iii/src/: config.h  main.cpp
the_day_of_sagittarius_iii/src/game/: game.cpp  game.h
